--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "homepage": "https://github.com/Ivan12273/contact-api-back#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
