--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "contact-api-back",
   "version": "1.0.0",
   "description": "API for manage users contact information",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,8 @@
   },
   "homepage": "https://github.com/Ivan12273/contact-api-back#readme",
   "dependencies": {
-    "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.7",
-    "mongoose-unique-validator": "^2.0.3"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
